# forgecore

./: .gitignore  README.md  pyproject.toml
src/forgecore/: __init__.py  dataset.py  dialect.py  spec.py  trace.py
src/forgerender/: __init__.py  dialect.py  scene.py  spec.py
src/forgerender.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_contract_hardening.py  test_dataset.py  test_dialect.py  test_scene.py  test_spec.py  test_trace.py
