[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forgerender"
version = "0.1.0"
description = "The forge render contract — ChartSpec schema consumed by renderers, emitted by solvers. Zero dependencies."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
